# utf8-console

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
example/: example.cpp
include/: utf8_console.h
include_head_only/utf8_console/: utf8_console.hpp
include_header_only/utf8_console/: utf8_console.hpp
src/: utf8_cin_windows.cpp  utf8_console.cpp  utfwidth.cpp  wcwidth.c
